--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.3",
+    "@sparticuz/chromium": "^130.0.0",
     "await-to-js": "^3.0.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
@@ -108,6 +109,7 @@
     "hono": "^4.6.8",
     "isomorphic-unfetch": "^4.0.2",
     "lodash-es": "^4.17.21",
+    "puppeteer-core": "^23.6.1",
     "tslib": "^2.8.0",
     "winston": "^3.15.0",
     "winston-daily-rotate-file": "^5.0.0"
