--- a/package.json
+++ b/package.json
@@ -102,6 +102,8 @@
   "dependencies": {
     "@hono/node-server": "^1.13.3",
     "@sparticuz/chromium": "^130.0.0",
+    "@vercel/blob": "^0.26.0",
+    "@vercel/kv": "^3.0.0",
     "await-to-js": "^3.0.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
